kubernetes/flux-system/capacitator/app/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app capacitator
  namespace: flux-system
  labels:
    app: *app
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 9000
  selector:
    app: *app
